Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13432

Assertion failure in buf0rea.cc line 577

    XMLWordPrintable

Details

    Description

      2017-05-31 12:14:51 7f5cfdff6700 InnoDB: Loading buffer pool(s) from .//ib_buffer_pool
      2017-05-31 12:16:44 7f5cfdff6700  InnoDB: Assertion failure in thread 140037375092480 in file buf0rea.cc line 577
      

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            jplindst Jan Lindström (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5d
                0.5d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.